# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine-core/: CMakeLists.txt
engine-core/shaders/: compile.sh  default.frag  default.vert  default_lit.frag  textured.frag  textured.vert  textured_lit.frag  tri_mesh_ssbo.vert
engine-core/shaders/gui/: gui-font.frag  gui.vert  image.frag  image.vert
engine-core/source/: entry_point.h
engine-core/source/engine/: camera.h  engine.cpp  engine.h  free_camera.cpp  free_camera.h  pch.h  types.h
engine-core/source/engine/render/: descriptors.cpp  descriptors.h  font.cpp  font.h  frames.cpp  frames.h  gpu_data.h  render.cpp  render.h  render_passes.cpp  render_passes.h  swapchain_handler.cpp  swapchain_handler.h  upload_context.cpp  upload_context.h  vk_info_initializers.cpp  vk_info_initializers.h  vk_state.cpp  vk_state.h  vulkan.cpp  vulkan.h
engine-core/source/engine/render/gui/: gui.cpp  gui.h  gui_element.h  gui_image.cpp  gui_image.h  gui_text.cpp  gui_text.h
engine-core/source/engine/render/resources/: materials.cpp  materials.h  mesh.cpp  mesh.h  pipeline.cpp  pipeline.h  resource_manager.cpp  resource_manager.h  resources.h  textures.cpp  textures.h  vertex.h
engine-core/source/engine/utils/: assert.cpp  file_watcher.h  function_queue.h  macros.h  thread_pool.h  time_handler.cpp  time_handler.h
engine-core/source/engine/utils/math/: math.cpp  math.h  spherical_vec.h
engine-core/source/os_level/: input.cpp  input.h  keyboard.h  keycodes.h  mouse.h  platform.h  window.cpp  window.h  window_handler.cpp  window_handler.h
engine-core/source/os_level/sdl/: sdl_window.cpp  sdl_window.h
engine-core/source/os_level/windows/: windows_window.cpp  windows_window.h
samples/example/: CMakeLists.txt
samples/example/source/: main.cpp
scripts/: setup-macos.sh  setup-make.sh  setup-vs.bat  setup-xcode.sh
